# alloy-rs

./: .deny.toml  .gitignore  .gitmodules  .lldbinit  .markdownlint.jsonc  .rustfmt.toml  CODEOWNER  Cargo.toml  LICENSE-MIT  README.md
.cargo-about/: about.toml  template.hbs
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  PRIVACY.md  SECURITY.md  SUPPORT.md  releases.yaml
.github/ISSUE_TEMPLATE/: bug-report.yaml  config.yaml  feature-request.yaml  security-vulnerability-report.yaml
.github/actions/cargo-about/: action.yaml
.github/actions/cargo-build/: action.yaml
.github/actions/cargo-bundle/: action.yaml
.github/actions/cargo-code-coverage/: action.yaml
.github/actions/cargo-install/: action.yaml
.github/actions/checkout/: action.yaml
.github/actions/github-close-pr/: action.yaml
.github/actions/github-comment/: action.yaml
.github/actions/github-issue-if-noexist/: action.yaml
.github/actions/github-issue-or-comment/: action.yaml
.github/actions/npm-install/: action.yaml
.github/actions/prepare-runner/: action.yaml
.github/actions/rust-toolchain/: action.yaml
.github/actions/setup-boxer/: action.yaml
.github/actions/setup-clang/: action.yaml
.github/actions/setup-glfw/: action.yaml
.github/actions/setup-openal-soft/: action.yaml
.github/actions/setup-vulkan/: action.yaml
.github/actions/update-apt/: action.yaml
.github/workflows/: audit.yaml  build-and-test.yaml  build.yaml  bundle.yaml  ci.yaml  close-pull-requests.yaml  community-issues.yaml  community-pull-requests.yaml  deploy-github-pages.yaml  deploy-master.yaml  docs.yaml  nightly.yaml  promote.yaml  scheduled-audit.yaml  scheduled-build.yaml
alloy/: Cargo.toml  build.rs
alloy/src/: cmp.rs  core.rs  geometry.rs  lib.rs  math.rs  meta.rs  model.rs  ops.rs
alloy/src/core/: align.rs  aligned_array.rs  clamped.rs  clamped.test.rs  hash.rs  hint.rs  ieee754.rs  ieee754.test.rs  slice.rs  slice.test.rs
alloy/src/core/hash/: crc32.rs  crc32.test.rs
alloy/src/geometry/: aabb.rs  aabb.test.rs  intersection.rs  intersection.test.rs  line.rs  line.test.rs  plane.rs  plane.test.rs  point.rs  sphere.rs  sphere.test.rs  traits.rs
alloy/src/geometry/point/: point3.rs  point3.test.rs
alloy/src/math/: angle.rs  dual_quaternion.rs  dual_quaternion.test.rs  euler.rs  interpolate.rs  mat.rs  quaternion.rs  quaternion.test.rs  simd.rs  vec.rs
alloy/src/math/mat/: col3.rs  col4.rs  col4.test.rs  mat3.rs  mat4.rs  mat4.test.rs
alloy/src/math/simd/: common.rs  float32x4_neon.rs  float32x4_none.rs
alloy/src/math/vec/: errors.rs  vec2.rs  vec2.test.rs  vec2i.rs  vec2i.test.rs  vec2u.rs  vec2u.test.rs  vec3.rs  vec3.test.rs  vec3i.rs  vec3i.test.rs  vec3u.rs  vec3u.test.rs  vec4.rs  vec4.test.rs  vec4i.rs  vec4i.test.rs  vec4u.rs  vec4u.test.rs
alloy/src/model/: clip.rs  color.rs  color.test.rs  obj.rs  projection.rs  transform.rs  transform.test.rs
data/lldb/: color.py  mat4.py  quaternion.py  vec2.py  vec3.py  vec4.py
docs/: .gitignore  book.toml  get-dependencies.bash
docs/src/: SUMMARY.md  community.md  development.md  introduction.md  resources.md  tour.md
docs/src/community/: CODE_OF_CONDUCT.md  GOVERNANCE.md  PRIVACY.md  SECURITY.md  SUPPORT.md
docs/src/development/: branch-strategy.md  commit-standards.md  definition-of-done.md  legal.md
docs/src/tour/: editors.md  engine.md
docs/src/tour/editors/: localization-editor.md  material-editor.md  resource-pipeline.md  storage-formats.md  (+1 more)
example/: Cargo.toml
example/src/: main.rs
examples/opengl-example/: Cargo.toml
examples/opengl-example/assets/shaders/triangle/: shader.frag  shader.vert
examples/opengl-example/src/: main.rs
examples/vulkan-example/: Cargo.toml  build.rs
examples/vulkan-example/src/: main.rs
frameworks/ansi/: Cargo.toml
frameworks/ansi/src/: lib.rs
frameworks/astd/: Cargo.toml
frameworks/astd/src/: convert.rs  ffi.rs  lib.rs  macros.rs  meta.rs  ptr.rs  source_location.rs
frameworks/boxer-sys/: Cargo.toml  build.rs
frameworks/boxer-sys/src/: CMakeLists.txt  boxer.h  boxer_linux.cpp  boxer_mac.mm  boxer_win.cpp  lib.rs
frameworks/foundation/: Cargo.toml
frameworks/foundation/src/: lib.rs
frameworks/gl/: Cargo.toml
frameworks/gl-sys/: Cargo.toml
frameworks/gl-sys/src/: glew.rs  lib.rs
frameworks/gl/src/: capability.rs  clear.rs  cull.rs  error.rs  info.rs  lib.rs  shader.rs  vertex.rs
frameworks/glew/: Cargo.toml  README.md
frameworks/glew-sys/: Cargo.toml  build.rs
frameworks/glew/src/: gl.rs  lib.rs
frameworks/glew/src/gl/: capability.rs  clear.rs  cull.rs  error.rs  info.rs
frameworks/glfw/: Cargo.toml  build.rs
frameworks/glfw-c/: Cargo.toml  build.rs
frameworks/glfw-c/src/: lib.rs
frameworks/glfw-sys/: Cargo.toml  build.rs
frameworks/glfw-sys/src/: lib.rs
frameworks/glfw/src/: lib.rs
frameworks/imgui/: Cargo.toml  build.rs
frameworks/imgui-sys/: Cargo.toml  build.rs
frameworks/imgui-sys/src/: CMakeLists.txt  imgui_glfw.cpp  imgui_opengl3.cpp  lib.rs
frameworks/imgui/src/: lib.rs
frameworks/log/: Cargo.toml
frameworks/log/src/: lib.rs  severity.rs
frameworks/openal/: Cargo.toml  build.rs  wrapper.h
frameworks/openal-sys/: Cargo.toml  build.rs
frameworks/openal-sys/src/: lib.rs
frameworks/openal/src/: lib.rs
frameworks/toast/: Cargo.toml
frameworks/toast/src/: lib.rs
frameworks/vulkan/: Cargo.toml  build.rs
frameworks/vulkan-sys/: Cargo.toml  build.rs
frameworks/vulkan-sys/src/: lib.rs
frameworks/vulkan/src/: alloc.rs  bool32.rs  debug.rs  device.rs  extension.rs  layer.rs  lib.rs  primitives.rs  result.rs
frameworks/vulkan/src/alloc/: allocation_callbacks.rs  allocator.rs  scope.rs
frameworks/vulkan/src/device/: physical_device.rs  physical_device_features.rs  physical_device_limits.rs  physical_device_properties.rs  physical_device_sparse_properties.rs  physical_device_type.rs  sample_count_flags.rs
frameworks/vulkan/src/primitives/: bool32.rs  version.rs
scripts/: install-git-hooks.bash  miri.bash  run-opengl-example.bash  run-vulkan-example.bash
scripts/git/: pre-commit
(+15 files in other folders)
