# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[workspace]
members = [
  "frameworks/build",
  "frameworks/foundation",
  "frameworks/boxer-sys",
  "frameworks/toast",
  "frameworks/glfw-sys",
  "frameworks/glfw",
  "frameworks/vulkan-sys",
  "frameworks/vulkan",
  "frameworks/openal-sys",
  "frameworks/openal",
  "frameworks/imgui-sys",
  "frameworks/imgui",
  "alloy",
  "example",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Matthew Rodusek"]
categories = ["framework", "video-game"]
license = "MIT OR APACHE2"
keywords = []
repository = "https://github.com/bitwizeshift/alloy-rs"
edition = "2021"

[workspace.dependencies]
bindgen = { version = "0.69.1" }
cmake = { version = "0.1" }
syn = { version = "1.0", features = ["full"] }
quote = { version = "1.0" }
proc-macro2 = { version = "1.0" }
