# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "alloy"
description = "A game engine written in Rust"
version.workspace = true
authors.workspace = true
license.workspace = true
categories = ["gui", "game-engines", "game-development"]
keywords = ["gui", "game-engines", "game-development"]
repository.workspace = true
edition.workspace = true

[features]
default = ["vulkan", "openal", "debug"]
vulkan = ["dep:vulkan", "glfw/vulkan"]
opengl = []
openal = ["dep:openal"]

# The "debug" feature enables debugging and validation logic
debug = []

[dependencies]
glfw = { path = "../frameworks/glfw", default-features = false}
vulkan = { path = "../frameworks/vulkan", optional = true }
openal = { path = "../frameworks/openal", optional = true }

[build-dependencies]
build = { path = "../frameworks/build" }
