[package]
name = "example"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { path = "../frameworks/glfw" }
vulkan = { path = "../frameworks/vulkan" }
openal = { path = "../frameworks/openal" }
