# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "example"
description = "A small demo using the alloy-rs engine"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = []
keywords = []
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw = { path = "../frameworks/glfw" }
vulkan = { path = "../frameworks/vulkan" }
openal = { path = "../frameworks/openal" }
imgui = { path = "../frameworks/imgui" }
foundation = { path = "../frameworks/foundation" }
toast = { path = "../frameworks/toast" }

[build-dependencies]
build = { path = "../frameworks/build" }
