# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "glew-sys"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }
