[package]
name = "glfw-c"
version = "3.3.8"
edition = "2021"
authors = ["Camilla Löwy", "Marcus Geelnard"]
description = " A multi-platform library for OpenGL, OpenGL ES, Vulkan, window and input"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/glfw/glfw"
readme = "../../3rd-party/glfw/README.md"
license = "Zlib"
build = "build.rs"
links = "glfw"

# [lib]
# name = "glfw_c"

[build-dependencies]
cmake = "0.1"
