# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "glfw-sys"
version = "3.3.8"
edition = "2021"
authors = ["Camilla Löwy", "Marcus Geelnard"]
description = " A multi-platform library for OpenGL, OpenGL ES, Vulkan, window and input"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/glfw/glfw"
readme = "../../3rd-party/glfw/README.md"
license = "Zlib"
license-file = "../../3rd-party/glfw/LICENSE.md"
build = "build.rs"
links = "glfw"

[features]
default = ["vulkan"]
wayland = []
vulkan = ["dep:vulkan-sys"]

[dependencies]
vulkan-sys = { path = "../vulkan-sys", optional = true }

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }
