# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "glfw-sys"
version = "3.3.8"
authors = ["Camilla Löwy", "Marcus Geelnard"]
description = " A multi-platform library for OpenGL, OpenGL ES, Vulkan, window and input"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/glfw/glfw"
readme = "../../3rd-party/glfw/README.md"
license = "Zlib"
categories = ["multimedia", "multimedia::graphics", "graphics", "external-ffi-bindings"]
keywords = ["vulkan", "glfw", "bindgen"]
edition.workspace = true

[features]
default = ["vulkan"]
wayland = []
vulkan = ["dep:vulkan-sys"]
opengl = ["dep:gl-sys"]

[dependencies]
vulkan-sys = { path = "../vulkan-sys", optional = true }
gl-sys = { path = "../gl-sys", optional = true }

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }
