[package]
name = "glfw"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = ["dep:vulkan"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glfw-sys = { path = "../glfw-sys" }
vulkan = { path = "../vulkan", optional = true }
foundation = { path = "../foundation" }
