# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "glfw"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["vulkan"]

# Enables Wayland front-end support in GLFW
wayland = ["glfw-sys/wayland"]

# Enables Vulkan support in GLFW
vulkan = ["dep:vulkan", "glfw-sys/vulkan"]

[dependencies]
glfw-sys = { path = "../glfw-sys", default-features = false }
vulkan = { path = "../vulkan", optional = true }
foundation = { path = "../foundation" }
