# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "glfw"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["multimedia", "multimedia::graphics", "graphics", "api-bindings", "rendering::engine"]
keywords = ["vulkan", "glfw"]
edition.workspace = true

[features]
default = []

# Enables Wayland front-end support in GLFW
wayland = ["glfw-sys/wayland"]

# Enables Vulkan support in GLFW
vulkan = ["dep:vulkan", "glfw-sys/vulkan"]
opengl = ["dep:gl", "glfw-sys/opengl"]

[dependencies]
glfw-sys = { path = "../glfw-sys", default-features = false }
vulkan = { path = "../vulkan", optional = true }
gl = { path = "../gl", optional = true }
