# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "imgui-sys"
version = "1.9.0"
authors = ["ocornut <ocornut@users.noreply.github.com>"]
categories = ["gui"]
license = "MIT"
keywords.workspace = true
repository = "https://github.com/ocornut/imgui"
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = ["dep:vulkan-sys", "glfw-sys/vulkan"]
opengl = []
dx12 = []

[dependencies]
glfw-sys = { path = "../glfw-sys", default-features = false}
vulkan-sys = { path = "../vulkan-sys", optional = true }

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }

