# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "imgui-sys"
version = "1.9.0"
authors = ["ocornut <ocornut@users.noreply.github.com>"]
license = "MIT"
repository = "https://github.com/ocornut/imgui"
categories = ["gui", "external-ffi-bindings"]
keywords = ["gui", "bindgen"]
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = ["dep:vulkan-sys", "glfw-sys/vulkan"]
opengl = ["dep:gl-sys"]
dx12 = []

[dependencies]
glfw-sys = { path = "../glfw-sys", default-features = false}
gl-sys = { path = "../gl-sys", optional = true}
vulkan-sys = { path = "../vulkan-sys", optional = true }

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }

