[package]
name = "imgui"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = []
opengl = []

[build-dependencies]
bindgen = "0.69.1"
build = { path = "../build" }
cc = "1.0"
