# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "imgui"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["vulkan"]
vulkan = ["imgui-sys/vulkan"]

[dependencies]
imgui-sys = { path = "../imgui-sys", default-features = false }
