# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "imgui"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["gui", "api-bindings"]
keywords = ["gui"]
edition.workspace = true

[features]
default = []
vulkan = ["imgui-sys/vulkan"]
opengl = ["imgui-sys/opengl"]

[dependencies]
imgui-sys = { path = "../imgui-sys", default-features = false }
