# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "log"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
categories = ["development-tools::debugging"]
keywords = ["logging"]

[features]
default = ["log-source"]
log-source = []

[dependencies]
foundation = { path = "../foundation" }
ansi = { path = "../ansi" }
