[package]
name = "openal-sys"
version = "1.23.1"
authors = ["Chris <chris.kcat@gmail.com>"]
categories = ["audio"]
license = "BSD-3-Clause"
keywords.workspace = true
repository = "https://repo.or.cz/w/openal-soft.git"
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
cmake = "0.1"
bindgen = "0.69.1"
build = { path = "../build" }
