# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "openal-sys"
version = "1.23.1"
authors = ["Chris <chris.kcat@gmail.com>"]
categories = ["audio"]
license = "BSD-3-Clause"
license-file = "../../3rd-party/openal-soft/COPYING"
keywords.workspace = true
repository = "https://repo.or.cz/w/openal-soft.git"
edition.workspace = true

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }
