# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "openal-sys"
version = "1.21.0"
authors = ["Chris <chris.kcat@gmail.com>"]
license = "BSD-3-Clause"
repository = "https://repo.or.cz/w/openal-soft.git"
categories = ["multimedia::audio", "external-ffi-bindings"]
keywords = ["audio", "openal", "bindgen"]
edition.workspace = true

[build-dependencies]
cmake = { workspace = true }
bindgen = { workspace = true }
build = { path = "../build" }
