# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "openal"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["multimedia::audio", "api-bindings"]
keywords = ["audio", "openal"]
edition.workspace = true

[dependencies]
openal-sys = { path = "../openal-sys" }
foundation = { path = "../foundation" }
