# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "toast"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
boxer-sys = { path = "../boxer-sys"}
foundation = { path = "../foundation" }
