# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "toast"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["api-bindings", "gui"]
keywords = ["gui", "toast", "window"]
edition.workspace = true

[dependencies]
boxer-sys = { path = "../boxer-sys"}
foundation = { path = "../foundation" }
