# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "vulkan-sys"
version = "1.3.271"
authors = ["The Khronos Group Inc."]
categories = ["graphics"]
license = "MIT OR Apache-2.0"
keywords = []
repository = "https://github.com/KhronosGroup/Vulkan-Headers"
edition.workspace = true

[build-dependencies]
bindgen = { workspace = true }
build = { path = "../build" }
