# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "vulkan-sys"
version = "1.3.271"
authors = ["The Khronos Group Inc."]
license = "MIT OR Apache-2.0"
repository = "https://github.com/KhronosGroup/Vulkan-Headers"
categories = ["graphics", "external-ffi-bindings"]
keywords = ["graphics", "vulkan", "bindgen"]
edition.workspace = true

[build-dependencies]
bindgen = { workspace = true }
build = { path = "../build" }
