# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "vulkan"
version.workspace = true
authors.workspace = true
categories.workspace = true
license.workspace = true
keywords.workspace = true
repository.workspace = true
edition.workspace = true

[features]
default = ["debug"]
debug = []

[dependencies]
vulkan-sys = { path = "../vulkan-sys" }
foundation = { path = "../foundation" }
