# Schema: https://doc.rust-lang.org/cargo/reference/manifest.html
[package]
name = "vulkan"
version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
categories = ["api-bindings", "graphics"]
keywords = ["vulkan"]
edition.workspace = true

[features]
default = ["debug"]
debug = []

[dependencies]
vulkan-sys = { path = "../vulkan-sys" }
